k8s/overlays/production/files.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files
spec:
  replicas: 2
  template:
    metadata:
      labels:
        deployment: files
    spec:
      containers:
      - name: manael
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
