k8s/overlays/production/streaming.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: streaming
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: streaming
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
      - name: cloudsql
        image: gcr.io/cloudsql-docker/gce-proxy:1.14
        command: ["/cloud_sql_proxy",
                  "-instances=ykzts-technology:asia-northeast1:ykzts-technology=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        ports:
        - containerPort: 5432
        securityContext:
          runAsUser: 2
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
