k8s/overlays/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mastodon
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: "ykzts-technology-cert,files-ykzts-technology-cert"
spec:
  rules:
  - host: ykzts.technology
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 3000
      - path: /api/v1/streaming/*
        backend:
          serviceName: streaming
          servicePort: 4000
  - host: files.ykzts.technology
    http:
      paths:
      - backend:
          serviceName: files
          servicePort: 8080
